# procedural-art

./: .gitmodules  CMakeLists.txt
src/: CMakeLists.txt  ParallelSinusoids.cpp  RandomLines.cpp  WindowManager.cpp  main.cpp
src/include/: Error.hpp  ParallelSinusoids.hpp  RandomLines.hpp  Result.hpp  SDLUtils.hpp  View.hpp  WindowManager.hpp
